openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wheel-of-fortune
  labels:
    name: wheel-of-fortune
    app: wheel-of-fortune
