openshift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wof-backend
  labels:
    app: wheel-of-fortune
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: wheel-of-fortune
    component: backend
