openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wof-frontend
  labels:
    app: wheel-of-fortune
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: wheel-of-fortune
    component: frontend
