openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wof-frontend-route
  labels:
    app: wheel-of-fortune
    component: frontend
spec:
  to:
    kind: Service
    name: wof-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
